Landing page styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,11 @@ a {
   width: auto !important;
 }
 
+/* ---------------------       Landing       --------------------- */
+.landing-row {
+  align-items: center;
+}
+
 /* ============================================================ *\
 *                           Helpers                              *
 \* -----------------------------------------------------------  */
