--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@ body {
 #map {
   height: 400px;
   width: 90%;
-  border: solid red 4px;
 }
 
 /* -------------------       Navbar       -------------------- */
@@ -190,19 +189,23 @@ a {
 
 .input-field label {
   color: #9e9e9e; /* Materialize default label color */
+  line-height: 0px;
 }
 
 .input-field label.active {
   color: #26a69a; /* Materialize primary color */
+  line-height: 0px;
 }
 
 .input-field input[type="text"]:focus + label {
   color: #26a69a; /* Materialize primary color */
+  padding: 5px;
 }
 
 .input-field input[type="text"]:focus {
   border-bottom: 1px solid #26a69a; /* Materialize primary color */
   box-shadow: 0 1px 0 0 #26a69a; /* Materialize primary color */
+  padding: 5px;
 }
 
 /* -------------------       About Us       -------------------- */
