--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
   box-shadow: 0 2px 2px 0 rgba(187, 221, 36, 0.14),
     0 3px 1px -2px rgba(187, 221, 36, 0.12), 0 1px 5px 0 rgba(187, 221, 36, 0.2);
 }
-
+/* sets the navbar display flex */
 .wh {
   display: flex !important;
 }
